--- a/core/view/form/FormElement_Upload.tmpl
+++ b/core/view/form/FormElement_Upload.tmpl
@@ -1,5 +1,7 @@
 {extends "core/view/form/FormElement.tmpl"}
 
 {block name="field"}
-<input type="file" name="{$htmlName}" id="{$htmlId}" class="{$inputClass} {$class}" {$extraAttributes} />
+<div class="styledUpload">
+	<input type="file" name="{$htmlName}" id="{$htmlId}" class="{$inputClass} {$class}" {$extraAttributes} />
+</div>
 {/block}
