--- a/core/view/autocomplete-inline-multi.tmpl
+++ b/core/view/autocomplete-inline-multi.tmpl
@@ -2,7 +2,7 @@
 
 {block extra}
 
-<ul id="{$baseID}-itemlist" class="itemList">
+<ul id="{$htmlID}-itemlist" class="itemList">
 	{foreach $selectedItems item}
 		<li id="{$item.id}">{$item.label}<span class="remove"></span></li>
 	{/foreach}
