--- a/core/view/autocomplete-inline.tmpl
+++ b/core/view/autocomplete-inline.tmpl
@@ -1,7 +1,7 @@
 <div class="main">
-	<input type="text" title="{Label core.input.autocompleter}" class="input textAC" id="{$baseID}" value="{htmlencode $valueLabel}" />
-	<div id="{$baseID}-suggestions" class="acResultContainer"></div>
-	<input id="{$baseID}-value" type="hidden" name="{$fieldname}" value="{$inputValue}" />
+	<input type="text" title="{Label core.input.autocompleter}" class="input textAC" id="{$htmlID}" value="{htmlencode $valueLabel}" />
+	<div id="{$htmlID}-suggestions" class="acResultContainer"></div>
+	<input id="{$htmlID}-value" type="hidden" name="{$fieldname}" value="{$inputValue}" />
 </div>
 <div class="extra">
 	{block "extra"}{/block}
