--- a/core/view/select-inline-multi.tmpl
+++ b/core/view/select-inline-multi.tmpl
@@ -2,11 +2,11 @@
 
 {block extra}
 
-<ul id="{$baseID}-itemlist" class="itemList">
+<ul id="{$htmlID}-itemlist" class="itemList">
 	{foreach $selectedItems item}
 		<li id="{$item.id}">{$item.label}<span class="remove"></span></li>
 	{/foreach}
 </ul>
-<input type="hidden" id="{$baseID}-value" name="{$fieldname_multi}" value="{$inputValue}" />
+<input type="hidden" id="{$htmlID}-value" name="{$fieldname_multi}" value="{$inputValue}" />
 
 {/block}
