* added large (32x32px) reminder icons (iconset: fatcow)

--- a/core/assets/css/content.css
+++ b/core/assets/css/content.css
@@ -8,6 +8,15 @@ div.icon {
 	height:18px;
 }
 
+div.iconLarge,
+span.iconLarge {
+	display:block;
+	float:left;
+	clear:none;
+	width:32px;
+	height:32px;
+}
+
 .link {
 	cursor:pointer;
 }
