--- a/core/assets/css/wizard.css
+++ b/core/assets/css/wizard.css
@@ -10,7 +10,7 @@
 }*/
 
 .wizard {
-	background-color:#FFF;
+
 }
 
 .wizard .navi,
@@ -40,10 +40,15 @@
 	padding:5px;
 }
 
+.wizard .navi ul li.active {
+	background-color:#F6F8F1;
+}
+
 .wizard .content {
 	padding:20px;
 	width:460px;
-	height:460px;
+	height:480px;
+	overflow:auto;
 }
 
 .wizard .content h1.title {
