--- a/core/assets/css/wizard.css
+++ b/core/assets/css/wizard.css
@@ -1,4 +1,4 @@
-/*#wizard-button {
+#wizard-firststeps-button {
 	position: fixed;
 	top:10px;
 	left:10px;
@@ -7,7 +7,7 @@
 	padding:10px;
 	cursor:pointer;
 	z-index:1000;
-}*/
+}
 
 .wizard {
 
@@ -44,6 +44,10 @@
 	background-color:#F6F8F1;
 }
 
+.wizard .navi ul li.done {
+	cursor:pointer;
+}
+
 .wizard .content {
 	padding:20px;
 	width:460px;
@@ -77,15 +81,50 @@
 .wizard .buttons > div {
 	float:left;
 	clear:none;
+	display:inline-block;
 }
 
 .wizard .buttons .close {
 	width:180px;
 	text-align:center;
+	margin-top:5px;
+}
+
+.wizard .buttons .close a {
+	background:url(../img/icons.png) no-repeat 0 -328px;
+	padding:3px;
+	padding-left:20px;
 }
 
 .wizard .buttons .main {
-	width:720px;
+	width:500px;
+}
+
+.wizard .buttons .main button {
+	clear:none;
+}
+
+.wizard .buttons .main button .icon {
+	background-repeat:no-repeat;
+	background-image:url(../img/icons.png);
+}
+
+.wizard .buttons .main .back {
+	float:left;
+}
+
+.wizard .buttons .main .next {
+	float:right;
+}
+
+.wizard .buttons .main .back .icon {
+	background-position:0 -1188px;
+}
+
+
+
+.wizard .buttons .main .next .icon {
+	background-position:0 -1218px;
 }
 
 
