--- a/core/assets/css/wizard.css
+++ b/core/assets/css/wizard.css
@@ -1,14 +1,3 @@
-#wizard-firststeps-button {
-	position: fixed;
-	top:10px;
-	left:10px;
-	background-color:#F00;
-	color:#FFF;
-	padding:10px;
-	cursor:pointer;
-	z-index:1000;
-}
-
 .wizard {
 
 }
@@ -58,7 +47,13 @@
 .wizard .content h1.title {
 	font-size:18px;
 	font-weight:bold;
-	margin-bottom:10px;
+	margin-bottom:20px;
+}
+
+.wizard .content p.info {
+	border-bottom:1px dashed #CCC;
+	margin:10px 0;
+	padding-bottom:10px;
 }
 
 .wizard .help {
