--- a/core/view/wizard.tmpl
+++ b/core/view/wizard.tmpl
@@ -4,7 +4,7 @@
 		<ul>
 			{foreach $steps step}
 				{$done = in_array($step.step, $doneSteps)}
-				<li class="{if $stepName==$step.step}active{/if}{if $done} done{/if}" {if $done}onclick="Todoyu.Wizard.goToStep('{$step.step}')"{/if}>{Label $step.label}</li>
+				<li class="{if $stepName==$step.step}active{/if}{if $done} done{/if}" {if $done}onclick="Todoyu.Wizard.goToStep('{$step.step}')"{/if}>{Label $step.title}</li>
 			{/foreach}
 		</ul>
 	</div>
@@ -12,8 +12,8 @@
 	<div class="content">
 		<h1 class="title">{$title}</h1>
 
-		{if $description}
-			<p class="description">{$description}</p>
+		{if $info}
+			<p class="info">{$info}</p>
 		{/if}
 
 		<form method="post" action="?ext=core&amp;controller=wizard" id="wizard-form">
