--- a/core/view/tabhead.tmpl
+++ b/core/view/tabhead.tmpl
@@ -2,6 +2,6 @@
 	<p id="{$name}-tab-{$tab.id}-label" class="label">
 		<span class="lt"><!-- --></span>
 		<span class="icon"><!-- icon --></span>
-		<span class="labeltext">{cropText htmlencode($tab.label) 24 false}</span>
+		<span class="labeltext">{htmlencode(cropText($tab.label,24,false))}</span>
 	</p>
 </li>
