--- a/core/assets/css/headlet-about.css
+++ b/core/assets/css/headlet-about.css
@@ -1,7 +1,7 @@
 /* -----------------------
 	About headlet
    ----------------------- */
-#headlet-about-button {
+#todoyuheadletabout .button {
 	background:url(../img/headlet-icons.png) no-repeat 1px -24px;
 }
 
