* Implemented headlets as classes * General headlet cleanup

--- a/core/view/headlet-menu.tmpl
+++ b/core/view/headlet-menu.tmpl
@@ -1,6 +1,6 @@
 <!-- <ul id="{$id}-menu"> -->
 	{foreach $items item}
-		<li class="item{ucfirst($item.id)} {$item.class}">
+		<li class="{$item.class}" id="menuItem-{$item.id}">
 			<a class="{$name}-item-{$item.id}">{Label $item.label}</a>
 		</li>
 	{/foreach}
