--- a/core/view/autocomplete-inline.tmpl
+++ b/core/view/autocomplete-inline.tmpl
@@ -1,5 +1,5 @@
 <div class="main">
-	<input type="text" title="{Label core.input.autocompleter}" class="input textAC" id="{$htmlID}" value="{htmlencode $valueLabel}" />
+	<input type="text" title="{Label core.global.input.autocompleter}" class="input textAC" id="{$htmlID}" value="{htmlencode $valueLabel}" />
 	<div id="{$htmlID}-suggestions" class="acResultContainer"></div>
 	<input id="{$htmlID}-value" type="hidden" name="{$fieldname}" value="{$inputValue}" />
 </div>
