--- a/core/view/footer.tmpl
+++ b/core/view/footer.tmpl
@@ -3,10 +3,10 @@
 		<div id="footer-line"></div>
 		<div id="footer-info">
 			{if isLoggedIn()}
-				{Label core.footer.version}: {constant(TODOYU_VERSION)}, {constant(TODOYU_UPDATE)}<br />
+				{Label core.global.footer.version}: {constant(TODOYU_VERSION)}, {constant(TODOYU_UPDATE)}<br />
 			{/if}
-			<a href="http://bugs.todoyu.com/" target="_blank" title="{Label core.footer.bugreport.title}">{Label core.footer.bugreport}</a> |
-			<a href="http://www.todoyu.com/en/message-board/forum/" target="_blank" title="{Label core.footer.forum.title}">{Label core.footer.forum}</a><br />
+			<a href="http://bugs.todoyu.com/" target="_blank" title="{Label core.global.footer.bugreport.title}">{Label core.global.footer.bugreport}</a> |
+			<a href="http://www.todoyu.com/en/message-board/forum/" target="_blank" title="{Label core.global.footer.forum.title}">{Label core.global.footer.forum}</a><br />
 		</div>
 		<div id="footer-logo">
 			<a href="http://www.todoyu.com" target="_blank" title="todoyu | get tasks done with your team"><img src="core/assets/img/logo.png" alt="todoyu" width="85" height="60" border="0" /></a>
