--- a/core/view/form/Fieldset.tmpl
+++ b/core/view/form/Fieldset.tmpl
@@ -1,5 +1,5 @@
 <fieldset id="{$htmlId}" class="{$class|default:$name}">
-<legend id="{$htmlId}-legend">{$legend}</legend>
+<legend id="{$htmlId}-legend">{Label $legend}</legend>
 	{$content}
 </fieldset>
 <div class="fieldset-clear" id="fieldset-clear-{$name}"> </div>
