--- a/core/view/form/FormElement_SelectGrouped.tmpl
+++ b/core/view/form/FormElement_SelectGrouped.tmpl
@@ -3,7 +3,7 @@
 {block name="field"}
 <select {$extraAttributes} name="{$htmlName}" id="{$htmlId}" class="{$inputClass} {$class}" size="{$size}" {if $multiple}multiple="multiple"{/if} {if $fieldClass}class="{$fieldClass}"{/if}>
 	{if !isset($multiple) && !isset($noPleaseSelect)}
-		<option value="0">{Label form.select.pleaseSelect}</option>
+		<option value="0">{Label core.form.select.pleaseSelect}</option>
 		<option value="0" disabled="disabled">---------------------------</option>
 	{/if}
 	{foreach $options label group}
