--- a/core/view/form/FormElement_Select_Options.tmpl
+++ b/core/view/form/FormElement_Select_Options.tmpl
@@ -1,5 +1,5 @@
 {if empty($multiple) && !isset($noPleaseSelect) && $size==1}
-	<option value="0">{Label form.select.pleaseSelect}</option>
+	<option value="0">{Label core.form.select.pleaseSelect}</option>
 	<option value="0" disabled="disabled">---------------------------</option>
 {/if}
 {foreach $options option}
