--- a/core/view/noaccess.tmpl
+++ b/core/view/noaccess.tmpl
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>{Label core.noAccess.pageTitle}</title>
+<title>{Label core.global.noAccess.pageTitle}</title>
 <link type="text/css" rel="stylesheet" media="all" href="core/assets/css/base.css" />
 <link type="text/css" rel="stylesheet" media="all" href="core/assets/css/layout.css" />
 <link type="text/css" rel="stylesheet" media="all" href="core/assets/css/content.css" />
@@ -59,17 +59,17 @@
 				</span>
 				<div id="content">
 					<div class="message">
-						<p><strong>{Label core.noAccess.pageTitle}</strong></h2>
-						<p>{Label core.noAccess.errorMessage}</p>
-						<p><a href="javascript:history.back()">{Label core.noAccess.goBackToLastPage}</a></p>
-						<p>{Label core.noAccess.contactAdmin}</p>
+						<p><strong>{Label core.global.noAccess.pageTitle}</strong></h2>
+						<p>{Label core.global.noAccess.errorMessage}</p>
+						<p><a href="javascript:history.back()">{Label core.global.noAccess.goBackToLastPage}</a></p>
+						<p>{Label core.global.noAccess.contactAdmin}</p>
 						<table width="500" border="0" cellspacing="0" cellpadding="5">
 							<tr>
-								<td width="120"><strong>{Label core.noAccess.requestURL}:</strong></td>
+								<td width="120"><strong>{Label core.global.noAccess.requestURL}:</strong></td>
 								<td width="360">{htmlencode $requestURL}</td>
 							</tr>
 							<tr>
-								<td><strong>{Label core.noAccess.missingRight}:</strong></td>
+								<td><strong>{Label core.global.noAccess.missingRight}:</strong></td>
 								<td>{$extKey} / {$right}</td>
 							</tr>
 							<tr>
