--- a/core/view/wizard.tmpl
+++ b/core/view/wizard.tmpl
@@ -37,10 +37,10 @@
 		</div>
 		<div class="main">
 			{if !$isFirst}
-				{Button label="LLL:core.wizard.back" class="back" onclick="Todoyu.Wizard.back()"}
+				{Button label="LLL:core.global.wizard.back" class="back" onclick="Todoyu.Wizard.back()"}
 			{/if}
 			{if !$isLast}
-				{Button label="LLL:core.wizard.next" class="next" onclick="Todoyu.Wizard.next()"}
+				{Button label="LLL:core.global.wizard.next" class="next" onclick="Todoyu.Wizard.next()"}
 			{/if}
 		</div>
 
