--- a/install/view/05_importtables.tmpl
+++ b/install/view/05_importtables.tmpl
@@ -3,7 +3,7 @@
 {block name="box"}
 	<div class="">
 		<div class="sqlQuery">
-			<strong>{Label installer.importtables.coretables}:</strong><br/>
+			<strong>{Label install.installer.importtables.coretables}:</strong><br/>
 			<ul>
 			{foreach $coreStructure tableName tableStructure}
 				<li>
@@ -17,7 +17,7 @@
 			{/foreach}
 			</ul>
 			<br/>
-			<strong>{Label installer.importtables.exttables}:</strong><br/>
+			<strong>{Label install.installer.importtables.exttables}:</strong><br/>
 			<ul>
 			{foreach $extStructure tableName tableStructure}
 				<li>
