--- a/install/view/06_systemconfig.tmpl
+++ b/install/view/06_systemconfig.tmpl
@@ -3,17 +3,17 @@
 {block name="box"}
 		<table width="500" border="0" cellspacing="0" cellpadding="3">
 			<tr>
-				<td width="109"><label for="name">{Label installer.systemconfig.name} *</label></td>
+				<td width="109"><label for="name">{Label install.installer.systemconfig.name} *</label></td>
 				<td width="379">
 					<input name="name" type="text" id="name" value="{$postData.name|default:'todoyu'}" />
 				</td>
 			</tr>
 			<tr>
-				<td><label for="email">{Label installer.systemconfig.email} *</label></td>
+				<td><label for="email">{Label install.installer.systemconfig.email} *</label></td>
 				<td><input type="text" name="email" id="email" value="{$postData.email}" /></td>
 			</tr>
 			<tr>
-				<td><label for="locale">{Label installer.systemconfig.locale}</label></td>
+				<td><label for="locale">{Label install.installer.systemconfig.locale}</label></td>
 				<td>
 					<select name="locale" id="locale">
 					{foreach $locales locale}
@@ -23,7 +23,7 @@
 				</td>
 			</tr>
 			<tr>
-				<td><label for="timezone">{Label installer.systemconfig.timezone}</label></td>
+				<td><label for="timezone">{Label install.installer.systemconfig.timezone}</label></td>
 				<td>
 					<select name="timezone" id="timezone">
 					{foreach $timezones timezone}
