--- a/install/view/08_importdemodata.tmpl
+++ b/install/view/08_importdemodata.tmpl
@@ -3,11 +3,11 @@
 {block name="box"}
 	<div class="field">
 		<input style="width:4%" type="checkbox" name="import" id="input" value="1" checked="checked">
-		<label for="input">{Label installer.importdemodata.checkboxlabel}</label>
+		<label for="input">{Label install.installer.importdemodata.checkboxlabel}</label>
 	</div>
 
 	<br />
-	<p>{Label installer.importdemodata.contains}</p>
+	<p>{Label install.installer.importdemodata.contains}</p>
 
 	<input type="hidden" name="importdemodata" value="1" />
 {/block}
