--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -30,8 +30,8 @@
 						</h1>
 						<img src="assets/img/banner.jpg">
 						<p class="slogan">
-						{Label installer.slogan.line1} &ndash;<br />
-						{Label installer.slogan.line2}
+						{Label install.installer.slogan.line1} &ndash;<br />
+						{Label install.installer.slogan.line2}
 						</p>
 					</div>
 				</div>
