--- a/install/view/01_license.tmpl
+++ b/install/view/01_license.tmpl
@@ -3,12 +3,12 @@
 {block name="box"}
 	<div id="licenseagreement">
 
-		<h2>{Label installer.license.eula}</h2>
+		<h2>{Label install.installer.license.eula}</h2>
 		<div class="enduserlicense">
 			<pre>{includeEscaped "LICENSE.txt"}</pre>
 		</div>
 
-		<h2>{Label installer.license.lgpl}</h2>
+		<h2>{Label install.installer.license.lgpl}</h2>
 		<ul class="thirdPartyLibs">
 			<li>TinyMCE</li>
 			<li>phpMail</li>
