--- a/install/view/02_servercheck.tmpl
+++ b/install/view/02_servercheck.tmpl
@@ -7,14 +7,14 @@
 				PHP version &gt;= 5.2
 			</td>
 			<td width="200">
-				{Label installer.servercheck.yourphpversion}: {constant(PHP_VERSION)}
+				{Label install.installer.servercheck.yourphpversion}: {constant(PHP_VERSION)}
 			</td>
 			<td width="150">
 				<strong>
 				{if $info.phpversion}
-					{Label installer.servercheck.yourphpversion.ok}
+					{Label install.installer.servercheck.yourphpversion.ok}
 				{else}
-					{Label installer.servercheck.yourphpversion.error}
+					{Label install.installer.servercheck.yourphpversion.error}
 				{/if}
 				</strong>
 			</td>
@@ -26,7 +26,7 @@
 		<tr>
 			<td>
 				{if $.foreach.writable.first}
-					{Label installer.servercheck.writableCheck}
+					{Label install.installer.servercheck.writableCheck}
 				{else}
 					&nbsp;
 				{/if}
@@ -37,9 +37,9 @@
 			<td>
 				<strong>
 				{if $status}
-					{Label installer.servercheck.writable}
+					{Label install.installer.servercheck.writable}
 				{else}
-					{Label installer.servercheck.notWritable}
+					{Label install.installer.servercheck.notWritable}
 				{/if}
 				</strong>
 			</td>
@@ -54,6 +54,6 @@
 	<script type="text/javascript">
 		document.observe('dom:loaded', Todoyu.Installer.hideButton.bind(Todoyu.Installer));
 	</script>
-	{Button label="LLL:installer.servercheck.buttonRecheck" onclick="location.href=location.href"}
+	{Button label="LLL:install.installer.servercheck.buttonRecheck" onclick="location.href=location.href"}
 	{/if}
 {/block}
