--- a/install/view/panelwidget-progress.tmpl
+++ b/install/view/panelwidget-progress.tmpl
@@ -1,6 +1,6 @@
 <div id="panelwidget-installprogress" class="panelWidget installprogress hasIcon">
 	<h1 id="panelwidget-installprogress-h1">
-		<span id="panelwidget-installprogress-title" class="title">{Label installer.panelWidget.title.progress}</span>
+		<span id="panelwidget-installprogress-title" class="title">{Label install.installer.panelWidget.title.progress}</span>
 		<span id="panelwidget-installprogress-toggle" class="toggle "></span>
 	</h1>
 	<div id="panelwidget-installprogress-content" class="content">
