--- a/core/view/about-window.tmpl
+++ b/core/view/about-window.tmpl
@@ -16,7 +16,7 @@
 <p class="info">
 	<br /><span id="about-credits-dedication">Special thanks go to:</span>
 
-<button onclick="Todoyu.CoreHeadlets.About.toggleCredits()" id="about-toggle-credits" type="button" class="button">
+<button onclick="Todoyu.Headlets.getHeadlet('todoyuheadletabout').toggleCredits()" id="about-toggle-credits" type="button" class="button">
 	<span class="icon"></span>
 	<span class="label">Third party products credits</span>
 	<span class="rgt"></span>
