--- a/core/assets/css/form.css
+++ b/core/assets/css/form.css
@@ -287,11 +287,14 @@ div.fElement {
 		}
 
 		.typeDatabaseRelation .databaseRelation span.additionalStuff {
+			position: relative;
 			float:right;
 		}
 
 		.typeDatabaseRelation .databaseRelation span.additionalStuff a.remove {
 			background:url(../img/icons.png) no-repeat 0 -539px;
+			position: absolute;
+			right: 0;
 		}
 
 	button.updateDatabase .icon {
