* Bugfix: Override gantt css styling for lt which breaks the styling of tabs

--- a/core/lib/js/dhtmlxgantt/dhtmlxgantt.css
+++ b/core/lib/js/dhtmlxgantt/dhtmlxgantt.css
@@ -6,3 +6,12 @@ div#ganttDiv table tbody tr td div div div {
 .taskNameItem{
 	color:#000 !important;
 }
+
+
+/* Fix: .lt was overriding tab styles. Limit it to gantt */
+.lt {
+	padding:0;
+}
+.ganttDiv .lt {
+	padding:0 0 0 14px;
+}
