* Change: Added Todoyu::$CONFIG['LOCALE']['logInvalidKeys'] flag * Change: Added role addLabel tag in form xml * Rename: TodoyuForm->validateSubforms * Cleanup: Form classes

--- a/core/config/form/role.xml
+++ b/core/config/form/role.xml
@@ -27,6 +27,7 @@
 
 				<field type="databaseRelation" name="persons">
 					<label>core.global.role.attr.persons</label>
+					<addLabel>contact.ext.person.new</addLabel>
 					<record>
 						<form>core/config/form/role-person.xml</form>
 						<url>
