* substituted unneccessary addslashes dwoo plugin by inlin PHP

--- a/install/view/configs/system.php.tmpl
+++ b/install/view/configs/system.php.tmpl
@@ -19,8 +19,8 @@
 * This copyright notice MUST APPEAR in all copies of the script.
 *****************************************************************************/
 
-Todoyu::$CONFIG['SYSTEM']['name'] 		= '{addslashes $name}';
-Todoyu::$CONFIG['SYSTEM']['email']		= '{addslashes $email}';
+Todoyu::$CONFIG['SYSTEM']['name'] 		= '{addslashes($name)}';
+Todoyu::$CONFIG['SYSTEM']['email']		= '{addslashes($email)}';
 Todoyu::$CONFIG['SYSTEM']['locale']		= '{$locale}';
 Todoyu::$CONFIG['SYSTEM']['timezone']	= '{$timezone}';
 
