--- a/install/view/configs/db.php.tmpl
+++ b/install/view/configs/db.php.tmpl
@@ -26,10 +26,10 @@
  */
 
 Todoyu::$CONFIG['DB'] = array(
-	'server'		=> '{addslashes $server}',
-	'username'		=> '{addslashes $username}',
-	'password'		=> '{addslashes $password}',
-	'database'		=> '{addslashes $database}',
+	'server'		=> '{addslashes($server)}',
+	'username'		=> '{addslashes($username)}',
+	'password'		=> '{addslashes($password)}',
+	'database'		=> '{addslashes($database)}',
 	'autoconnect'	=> true,
 	'persistent'	=> true,
 	'queryHistory'	=> false
