--- a/core/view/footer.tmpl
+++ b/core/view/footer.tmpl
@@ -5,7 +5,7 @@
 			{if isLoggedIn()}
 				{Label core.global.footer.version}: {constant(TODOYU_VERSION)}, {constant(TODOYU_UPDATE)}<br />
 			{/if}
-			<a href="http://bugs.todoyu.com/" target="_blank" title="{Label core.global.footer.bugreport.title}">{Label core.global.footer.bugreport}</a> |
+			<a href="https://code.todoyu.com/wiki/bugtracker" target="_blank" title="{Label core.global.footer.bugreport.title}">{Label core.global.footer.bugreport}</a> |
 			<a href="http://www.todoyu.com/en/message-board/forum/" target="_blank" title="{Label core.global.footer.forum.title}">{Label core.global.footer.forum}</a><br />
 		</div>
 		<div id="footer-logo">
