--- a/core/asset/css/content.css
+++ b/core/asset/css/content.css
@@ -211,6 +211,10 @@ h1.headerLine.hasIcon span.title {
 	line-height:20px;
 }
 
+div.dialog_content h1.headerLine {
+	display:none;
+}
+
 	/* h3 */
 .headLabel span {
 	display:block;
