* task no. 1401.467 * fixed bugs for the browser chrome

--- a/core/asset/css/content.css
+++ b/core/asset/css/content.css
@@ -57,6 +57,7 @@ span.iconLarge {
 ul.ulList {}
 ul.ulList li.listItem {
 	overflow:hidden;
+	list-style: none;
 	line-height:18px;
 }
 * html ul.ulList li.listItem {
