--- a/core/asset/css/form.css
+++ b/core/asset/css/form.css
@@ -60,8 +60,7 @@ form {
 	}
 	.fForm legend {
 		position:absolute;
-		top:-40px;
-		left:-15px;
+		margin:-40px 0 0 -15px;
 		display:block;
 		width:100%;
 		padding:7px 0;
