--- a/core/asset/css/navi.css
+++ b/core/asset/css/navi.css
@@ -43,10 +43,10 @@ ul#navi-main-list li a span.lt {
 	background-image:url('../img/rounded-box01.png');
 }
 
-ul#navi-main-list li:hover a,
-ul#navi-main-list li a.active {
-	background-image:none;
-}
+/*ul#navi-main-list > li:hover a,*/
+/*ul#navi-main-list > li a.active {*/
+	/*background-image:none;*/
+/*}*/
 
 ul#navi-main-list li.active {
 	background-color:#e3eace; /* bcl02 */
