--- a/core/view/select-inline.tmpl
+++ b/core/view/select-inline.tmpl
@@ -1,5 +1,5 @@
 <div class="main">
-{select options=$options name="$fieldname" value=$value id=$htmlID class=$class size=$size multiple=$multiple disabled=$disabled onchange=$onchange onclick=$onclick}
+{select options=$options name="$fieldname" value=$value id=$htmlID class=$class size=$size multiple=$multiple disabled=$disabled onchange=$onchange onclick=$onclick noPleaseSelect=$noPleaseSelect}
 </div>
 <div class="extra">
 	{block "extra"}{/block}
